# GameOfLife

./: .gitignore  CMakeLists.txt  README.md
src/libgtest/: CMakeLists.txt
src/libmain/: App.cpp  App.h  Barrier.h  Board.cpp  Board.h  CMakeLists.txt  CellState.h  ChronoClock.h  Matrix2D.h  RuleSet.cpp  RuleSet.h  SDLUtil.h  SFMLUtil.h  TimeUtil.h  WorkerPool.h  World.cpp  World.h
src/main/: CMakeLists.txt  main.cpp
src/test/: BoardTest.cpp  CMakeLists.txt  RuleSetTest.cpp  main.cpp
